--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ license = "apache 2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.14"
 aiosqlite = "^0.20.0"
 pyqt6 = "^6.7.1"
 pyyaml = "^6.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+pyinstaller = "^6.11.1"
 
 [tool.poetry.scripts]
 songdatabase = "songdatabase.app:start"
