--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         poetry run pyinstaller \
           --name songdatabase.${{ matrix.extension }} \
-          --distpath /dist/${{ matrix.extension }} \
+          --distpath dist/${{ matrix.extension }} \
           --add-data "log:log" \
           --add-data "database:database" \
           --add-data "config.yml:."
