--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           --add-data "database:database" \
           --add-data "config.yml:."
           src/songdatabase/app.py
+      working-directory: ${{ github.workspace }}
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
