--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,10 @@ jobs:
           src/songdatabase/app.py
       working-directory: ${{ github.workspace }}
 
+    - name: Create Distribution Directory
+      run: mkdir -p dist/${{ matrix.os }}
+      working-directory: ${{ github.workspace }}
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
