--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
 
     steps:
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set Up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
 
@@ -47,11 +47,12 @@ jobs:
       working-directory: ${{ github.workspace }}
 
     - name: Create Distribution Directory
-      run: mkdir -p dist/${{ matrix.os }}
+      run: | 
+        mkdir -p dist/${{ matrix.os }}
       working-directory: ${{ github.workspace }}
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: songdatabase-${{ matrix.os }}
         path: dist/${{ matrix.os }}
