--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,10 @@ jobs:
         pip install poetry
         poetry install
 
+    - name: Create Distribution Directory
+      run: mkdir -p dist/${{ matrix.os }}
+      working-directory: ${{ github.workspace }}
+
     - name: Package with PyInstaller
       run: |
         poetry run pyinstaller \
@@ -44,11 +48,6 @@ jobs:
           --add-data "database:database" \
           --add-data "config.yml:." \
           src/songdatabase/app.py
-      working-directory: ${{ github.workspace }}
-
-    - name: Create Distribution Directory
-      run: | 
-        mkdir -p dist/${{ matrix.os }}
       working-directory: ${{ github.workspace }}
 
     - name: Upload Artifact
