--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,37 +21,43 @@ jobs:
         python-version: ["3.10"]
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+      Step 1:
+        - name: Checkout Code
+          uses: actions/checkout@v4
 
-    - name: Set Up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
+      Step 2:
+      - name: Set Up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
+      Step 3:
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install poetry
+            poetry install
 
-    - name: Create Distribution Directory
-      run: mkdir -p dist/${{ matrix.os }}
-      working-directory: ${{ github.workspace }}
+      Step 4:
+        - name: Create Distribution Directory
+          run: mkdir -p dist/${{ matrix.os }}
+          working-directory: ${{ github.workspace }}
 
-    - name: Package with PyInstaller
-      run: |
-        poetry run pyinstaller \
-          --name songdatabase.${{ matrix.extension }} \
-          --distpath dist/${{ matrix.extension }} \
-          --add-data "log:log" \
-          --add-data "database:database" \
-          --add-data "config.yml:." \
-          src/songdatabase/app.py
-      working-directory: ${{ github.workspace }}
+      Step 5:
+        - name: Package with PyInstaller
+          run: |
+            poetry run pyinstaller \
+              --name songdatabase.${{ matrix.extension }} \
+              --distpath dist/${{ matrix.extension }} \
+              --add-data "log:log" \
+              --add-data "database:database" \
+              --add-data "config.yml:." \
+              src/songdatabase/app.py
+            working-directory: ${{ github.workspace }}
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: songdatabase-${{ matrix.os }}
-        path: dist/${{ matrix.os }}
+      Step 6:
+        - name: Upload Artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: songdatabase-${{ matrix.os }}
+            path: dist/${{ matrix.os }}
