--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,10 @@ jobs:
 
     strategy:
       matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
         include:
           - os: ubuntu-latest
             extension: bin
@@ -52,4 +56,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: songdatabase-${{ matrix.os }}
-          path: dist/${{ matrix.os }}
+          path: ${{ github.workspace }}/dist/${{ matrix.os }}
