--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,8 @@ jobs:
             src/songdatabase/app.py
         working-directory: ${{ github.workspace }}
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
         with:
           name: songdatabase-${{ matrix.os }}
           path: ${{ github.workspace }}/dist/${{ matrix.os }}
