--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,13 @@ jobs:
             --add-data "config.yml:." \
             src/songdatabase/app.py
         working-directory: ${{ github.workspace }}
-
+        
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: songdatabase-${{ matrix.os }}
+          path: ${{ github.workspace }}/dist/${{ matrix.os }}
+          
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
