--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,6 +60,6 @@ jobs:
           cp -r dist/* .
           git add .
           git commit -m "Add built artifacts for ${{ matrix.os }}"
-          git push origin main
+          git push origin artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
